css link + normalizer + main.css

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">пгд
+    <link rel="stylesheet" href="./css/main.css">
     <title>Unique-tech</title>
 </head>
 
