--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../build/css/main.css">
     <title>Unique-tech</title>
 </head>
 
@@ -31,25 +31,25 @@
     <section class="services">
         <h2>what we do</h2>
         <div class="services__block">
-            <artcle class="services__content">
+            <article class="services__content">
                 <h3>search engine optimization</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!</p>
                 <a href="#">view more	</a>
-            </artcle>
+            </article>
         </div>
         <div class="services__block">
-            <artcle class="services__content">
+            <article class="services__content">
                 <h3>affiliate marketting</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!</p>
                 <a href="#">view more	</a>
-            </artcle>
+            </article>
         </div>
         <div class="services__block">
-            <artcle class="services__content">
+            <article class="services__content">
                 <h3>web design</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!</p>
                 <a href="#">view more	</a>
-            </artcle>
+            </article>
         </div>
     </section>
     <!--	назвать иначе??-->
