--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:100,300,400,500,700,900|Source+Sans+Pro:700&amp;subset=cyrillic-ext" rel="stylesheet">
+
     <link rel="stylesheet" href="./css/main.css">
     <title>Unique-tech</title>
 </head>
