--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../build/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Unique-tech</title>
 </head>
 
