--- a/src/index.html
+++ b/src/index.html
@@ -57,54 +57,54 @@
         <h2>how we work</h2>
         <div class="process__content"></div>
     </section>
-    <section class="feautures">
+    <section class="our-features">
         <h3>our features</h3>
-        <div>
-            <h3>Visual Composer</h3>
+        <div class="our-features__section">
+            <h3 class="our-features__head">Visual Composer</h3>
             <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
         </div>
-        <div>
-            <h3>Responsive</h3>
+        <div class="our-features__section">
+            <h3 class="our-features__head">Responsive</h3>
             <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
         </div>
-        <div>
-            <h3>Retina Ready</h3>
+        <div class="our-features__section">
+            <h3 class="our-features__head">Retina Ready</h3>
             <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
         </div>
-        <div>
-            <h3>Typography</h3>
+        <div class="our-features__section">
+            <h3 class="our-features__head">Typography</h3>
             <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
         </div>
-        <div>
-            <h3>VTheme Options Pannel</h3>
+        <div class="our-features__section">
+            <h3 class="our-features__head">VTheme Options Pannel</h3>
             <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
         </div>
-        <div>
-            <h3>Dummy Content</h3>
+        <div class="our-features__section">
+            <h3 class="our-features__head">Dummy Content</h3>
             <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
         </div>
-        <div>
-            <h3>Many Style Available</h3>
+        <div class="our-features__section">
+            <h3 class="our-features__head">Many Style Available</h3>
             <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
         </div>
-        <div>
-            <h3>Header Style</h3>
+        <div class="our-features__section">
+            <h3 class="our-features__head">Header Style</h3>
             <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
         </div>
-        <div>
-            <h3>10000+ icons</h3>
+        <div class="our-features__section">
+            <h3 class="our-features__head">10000+ icons</h3>
             <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
         </div>
-        <div>
-            <h3>Support</h3>
+        <div class="our-features__section">
+            <h3 class="our-features__head">Support</h3>
             <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
         </div>
-        <div>
-            <h3>Update</h3>
+        <div class="our-features__section">
+            <h3 class="our-features__head">Update</h3>
             <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
         </div>
-        <div>
-            <h3>SEO Ready</h3>
+        <div class="our-features__section">
+            <h3 class="our-features__head">SEO Ready</h3>
             <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
         </div>
     </section>
