--- a/src/index.html
+++ b/src/index.html
@@ -5,27 +5,30 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/main.css">
     <title>Unique-tech</title>
-    </head>
+</head>
 
 <body>
-    <header class="header">
-        <img class="log0">
-        <nav>
-            <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#">services</a></li>
-                <li><a href="#">about</a></li>
-                <li><a href="#">portfolio</a></li>
-                <li><a href="#">academic</a></li>
-                <li><a href="#">blog</a></li>
-                <li><a href="#">contact us</a><br/>
-                    <a href='tel:#'>(+966-322 322)</a></li>
-            </ul>
-        </nav>
+    <header class="header header--bgColor">
+        <div class="container">
+            <img class="log0">
+            <nav>
+                <ul>
+                    <li><a href="#">home</a></li>
+                    <li><a href="#">services</a></li>
+                    <li><a href="#">about</a></li>
+                    <li><a href="#">portfolio</a></li>
+                    <li><a href="#">academic</a></li>
+                    <li><a href="#">blog</a></li>
+                    <li><a href="#">contact us</a><br/>
+                        <a href='tel:#'>(+966-322 322)</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <section class="welcome">
         <h1>unique-tech app development</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum dicta nobis aliquam iusto asperiores obcaecati ab iure ipsum corporis, magni vitae recusandae dolore nostrum iste officia totam tempore ipsam molestias.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum dicta nobis aliquam iusto asperiores obcaecati
+            ab iure ipsum corporis, magni vitae recusandae dolore nostrum iste officia totam tempore ipsam molestias.</p>
         <button type="button">View More</button>
     </section>
     <section class="services">
@@ -33,22 +36,31 @@
         <div class="services__block">
             <article class="services__content">
                 <h3>search engine optimization</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!</p>
-                <a href="#">view more	</a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione
+                    aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae
+                    hic!
+                </p>
+                <a href="#">view more </a>
             </article>
         </div>
         <div class="services__block">
             <article class="services__content">
                 <h3>affiliate marketting</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!</p>
-                <a href="#">view more	</a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione
+                    aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae
+                    hic!
+                </p>
+                <a href="#">view more </a>
             </article>
         </div>
         <div class="services__block">
             <article class="services__content">
                 <h3>web design</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!</p>
-                <a href="#">view more	</a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione
+                    aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae
+                    hic!
+                </p>
+                <a href="#">view more </a>
             </article>
         </div>
     </section>
@@ -61,51 +73,63 @@
         <h3>our features</h3>
         <div>
             <h3>Visual Composer</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
+            </p>
         </div>
         <div>
             <h3>Responsive</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
+            </p>
         </div>
         <div>
             <h3>Retina Ready</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
+            </p>
         </div>
         <div>
             <h3>Typography</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
+            </p>
         </div>
         <div>
             <h3>VTheme Options Pannel</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
+            </p>
         </div>
         <div>
             <h3>Dummy Content</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
+            </p>
         </div>
         <div>
             <h3>Many Style Available</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
+            </p>
         </div>
         <div>
             <h3>Header Style</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
+            </p>
         </div>
         <div>
             <h3>10000+ icons</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
+            </p>
         </div>
         <div>
             <h3>Support</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
+            </p>
         </div>
         <div>
             <h3>Update</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
+            </p>
         </div>
         <div>
             <h3>SEO Ready</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
+            </p>
         </div>
     </section>
     <section class="packages"></section>
