--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:100,300,400,500,700,900|Source+Sans+Pro:700&amp;subset=cyrillic-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:100,300,400,500,700,900|Source+Sans+Pro:700&amp;subset=cyrillic-ext"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="./css/main.css">
     <title>Unique-tech</title>
@@ -12,8 +13,8 @@
 
 <body>
     <header class="header header--bgColor">
-        <div class="container">
-            <img class="log0">
+        <div class="header__container">
+            <img class="logo">
             <nav>
                 <ul>
                     <li><a href="#">home</a></li>
@@ -28,11 +29,14 @@
             </nav>
         </div>
     </header>
-    <section class="welcome">
-        <h1>unique-tech app development</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum dicta nobis aliquam iusto asperiores obcaecati
-            ab iure ipsum corporis, magni vitae recusandae dolore nostrum iste officia totam tempore ipsam molestias.</p>
-        <button type="button">View More</button>
+    <section class="welcome welcome--bgColor">
+        <div class="header__container">
+
+            <h1>unique-tech app development</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum dicta nobis aliquam iusto asperiores obcaecati
+                ab iure ipsum corporis, magni vitae recusandae dolore nostrum iste officia totam tempore ipsam molestias.</p>
+            <button type="button">View More</button>
+        </div>
     </section>
     <section class="services">
         <h2>what we do</h2>
