--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:100,300,400,500,700,900|Source+Sans+Pro:700&amp;subset=cyrillic-ext"
-        rel="stylesheet">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:100,300,400,500,700,900|Source+Sans+Pro:700&amp;subset=cyrillic-ext" rel="stylesheet">
 
     <link rel="stylesheet" href="./css/main.css">
     <title>Unique-tech</title>
@@ -33,8 +32,7 @@
         <div class="header__container">
 
             <h1>unique-tech app development</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum dicta nobis aliquam iusto asperiores obcaecati
-                ab iure ipsum corporis, magni vitae recusandae dolore nostrum iste officia totam tempore ipsam molestias.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum dicta nobis aliquam iusto asperiores obcaecati ab iure ipsum corporis, magni vitae recusandae dolore nostrum iste officia totam tempore ipsam molestias.</p>
             <button type="button">View More</button>
         </div>
     </section>
@@ -43,9 +41,7 @@
         <div class="services__block">
             <article class="services__content">
                 <h3>search engine optimization</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione
-                    aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae
-                    hic!
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!
                 </p>
                 <a href="#">view more </a>
             </article>
@@ -53,9 +49,7 @@
         <div class="services__block">
             <article class="services__content">
                 <h3>affiliate marketting</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione
-                    aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae
-                    hic!
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!
                 </p>
                 <a href="#">view more </a>
             </article>
@@ -63,9 +57,7 @@
         <div class="services__block">
             <article class="services__content">
                 <h3>web design</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione
-                    aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae
-                    hic!
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!
                 </p>
                 <a href="#">view more </a>
             </article>
