--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,49 @@
     <section class="team"></section>
     <section class="support"></section>
     <section class="hire_us"></section>
-    <footer class="footer"></footer>
+    <footer>
+        <section class="footer">
+            <nav class="footer__menu">
+                <ul>
+                    <h3>PORTFOLIO</h3>
+                    <li><a href="#">Web Design</a></li>
+                    <li><a href="#">Branding & Idefinity</a></li>
+                    <li><a href="#">Mobile Design</a></li>
+                    <li><a href="#">Print</a></li>
+                    <li><a href="#">User Interfase</a></li>
+                </ul>
+                <ul>
+                    <h3>ABOUT</h3>
+                    <li><a href="#">The Company</a></li>
+                    <li><a href="#">History</a></li>
+                    <li><a href="#">Vision</a></li>
+                </ul>
+                <ul>
+                    <h3>GALLERY</h3>
+                    <li><a href="#">Flickr</a></li>
+                    <li><a href="#">Picasa</a></li>
+                    <li><a href="#">iStickPhoto</a></li>
+                    <li><a href="#">PhotoDune</a></li>
+
+                </ul>
+                <ul>
+                    <h3>CONTACT</h3>
+                    <li><a href="#">Basic Info</a></li>
+                    <li><a href="#">Map</a></li>
+                    <li><a href="#">Contact Form</a></li>
+                </ul>
+            </nav>
+            <div class="footer__social">
+                <div class="social">
+                    <div class="social__block"><a><i class="fab fa-facebook-f"></i></a></div>
+                    <div class="social__block"><a><i class="fab fa-twitter"></i></a></div>
+                    <div class="social__block"><a><i class="fab fa-google-plus-g"></i></a></div>
+                    <div class="social__block"><a><i class="fab fa-linkedin-in"></i></a></div>
+                </div>
+                <p>Copiyright © 2015 Syed Miraj.All rights reserved.</p>
+            </div>
+        </section>
+    </footer>
 </body>
 
 </html>
