--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,15 @@
     <section class="projects"></section>
     <section class="team"></section>
     <section class="support"></section>
-    <section class="hire_us"></section>
+    <section class="hire__container">
+        <div class="hire">
+            <img class="hire__img" src="hire.png">
+            <div class="hire__content">
+                <h3>NEED CREATIVE WORKERS?</h3>
+                <button class="hire__button" form=""><span><b>HIRE US</b></button>
+            </div>
+        </div>
+    </section>
     <footer>
         <section class="footer">
             <nav class="footer__menu">
