Add section support

--- a/src/index.html
+++ b/src/index.html
@@ -135,7 +135,19 @@
     <section class="history"></section>
     <section class="projects"></section>
     <section class="team"></section>
-    <section class="support"></section>
+    <section class="support">
+        <button class="support__name-btn">
+                <h2>UPDATES & SUPPORT</h2>
+            </button>
+        <svg class="airplane"></svg>
+        <div class="suppport__conteiner">
+            <img class="support__img" src="macbook.png">
+            <article class="support__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis
+                iste natus error sit voluptatem.</article>
+            <button class="support__yellow-btn">SUPPORT CENTER</button>
+        </div>
+    </section>
     <section class="hire__container">
         <div class="hire">
             <img class="hire__img" src="hire.png">
