--- a/src/index.html
+++ b/src/index.html
@@ -4,33 +4,33 @@
 <head>
     <meta charset="UTF-8">
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:100,300,400,500,700,900|Source+Sans+Pro:700&amp;subset=cyrillic-ext"
+    <link class="nav__element" nk href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:100,300,400,500,700,900|Source+Sans+Pro:700&amp;subset=cyrillic-ext"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="./css/main.css">
-    <title>Unique-tech</title>
+        <link class="nav__element" nk rel="stylesheet" href="./css/main.css">
+            <title>Unique-tech</title>
 </head>
 
 <body>
     <header class="header header--bgColor">
-        <div class="header__container">
+        <div class="container header__container">
             <img class="logo">
-            <nav>
-                <ul>
-                    <li><a href="#">home</a></li>
-                    <li><a href="#">services</a></li>
-                    <li><a href="#">about</a></li>
-                    <li><a href="#">portfolio</a></li>
-                    <li><a href="#">academic</a></li>
-                    <li><a href="#">blog</a></li>
-                    <li><a href="#">contact us</a><br/>
+            <nav class="nav">
+                <ul class="nav__block">
+                    <li class="nav__element"><a class="nav__link" href="#">home</a></li>
+                    <li class="nav__element"><a class="nav__link" href="#">services</a></li>
+                    <li class="nav__element"><a class="nav__link" href="#">about</a></li>
+                    <li class="nav__element"><a class="nav__link" href="#">portfolio</a></li>
+                    <li class="nav__element"><a class="nav__link" href="#">academic</a></li>
+                    <li class="nav__element"><a class="nav__link" href="#">blog</a></li>
+                    <li class="nav__element"><a class="nav__link" href="#">contact us</a><br/>
                         <a href='tel:#'>(+966-322 322)</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <section class="welcome welcome--bgColor">
-        <div class="header__container">
+        <div class="container">
 
             <h1>unique-tech app development</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum dicta nobis aliquam iusto asperiores obcaecati
@@ -39,112 +39,151 @@
         </div>
     </section>
     <section class="services">
-        <h2>what we do</h2>
-        <div class="services__block">
-            <article class="services__content">
-                <h3>search engine optimization</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione
-                    aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae
-                    hic!
-                </p>
-                <a href="#">view more </a>
-            </article>
-        </div>
-        <div class="services__block">
-            <article class="services__content">
-                <h3>affiliate marketting</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione
-                    aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae
-                    hic!
-                </p>
-                <a href="#">view more </a>
-            </article>
-        </div>
-        <div class="services__block">
-            <article class="services__content">
-                <h3>web design</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione
-                    aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae
-                    hic!
-                </p>
-                <a href="#">view more </a>
-            </article>
+        <div class="container">
+            <h2>what we do</h2>
+            <div class="services__block">
+                <article class="services__content">
+                    <h3>search engine optimization</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
+                        Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
+                        rerum molestiae hic!
+                    </p>
+                    <a href="#">view more </a>
+                </article>
+            </div>
+            <div class="services__block">
+                <article class="services__content">
+                    <h3>affiliate marketting</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
+                        Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
+                        rerum molestiae hic!
+                    </p>
+                    <a href="#">view more </a>
+                </article>
+            </div>
+            <div class="services__block">
+                <article class="services__content">
+                    <h3>web design</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
+                        Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
+                        rerum molestiae hic!
+                    </p>
+                    <a href="#">view more </a>
+                </article>
+            </div>
         </div>
     </section>
     <!--	назвать иначе??-->
+    <div class="container"></div>
     <section class="process">
-        <h2>how we work</h2>
-        <div class="process__content"></div>
+        <div class="container">
+
+            <h2>how we work</h2>
+            <div class="process__content"></div>
+        </div>
     </section>
     <section class="feautures">
-        <h3>our features</h3>
-        <div>
-            <h3>Visual Composer</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
-            </p>
-        </div>
-        <div>
-            <h3>Responsive</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
-            </p>
-        </div>
-        <div>
-            <h3>Retina Ready</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
-            </p>
-        </div>
-        <div>
-            <h3>Typography</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
-            </p>
-        </div>
-        <div>
-            <h3>VTheme Options Pannel</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
-            </p>
-        </div>
-        <div>
-            <h3>Dummy Content</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
-            </p>
-        </div>
-        <div>
-            <h3>Many Style Available</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
-            </p>
-        </div>
-        <div>
-            <h3>Header Style</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
-            </p>
-        </div>
-        <div>
-            <h3>10000+ icons</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
-            </p>
-        </div>
-        <div>
-            <h3>Support</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
-            </p>
-        </div>
-        <div>
-            <h3>Update</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
-            </p>
-        </div>
-        <div>
-            <h3>SEO Ready</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
-            </p>
+        <div class="container">
+
+            <h3>our features</h3>
+            <div>
+                <h3>Visual Composer</h3>
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
+                    our.
+                </p>
+            </div>
+            <div>
+                <h3>Responsive</h3>
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
+                    our.
+                </p>
+            </div>
+            <div>
+                <h3>Retina Ready</h3>
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
+                    our.
+                </p>
+            </div>
+            <div>
+                <h3>Typography</h3>
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
+                    our.
+                </p>
+            </div>
+            <div>
+                <h3>VTheme Options Pannel</h3>
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
+                    our.
+                </p>
+            </div>
+            <div>
+                <h3>Dummy Content</h3>
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
+                    our.
+                </p>
+            </div>
+            <div>
+                <h3>Many Style Available</h3>
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
+                    our.
+                </p>
+            </div>
+            <div>
+                <h3>Header Style</h3>
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
+                    our.
+                </p>
+            </div>
+            <div>
+                <h3>10000+ icons</h3>
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
+                    our.
+                </p>
+            </div>
+            <div>
+                <h3>Support</h3>
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
+                    our.
+                </p>
+            </div>
+            <div>
+                <h3>Update</h3>
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
+                    our.
+                </p>
+            </div>
+            <div>
+                <h3>SEO Ready</h3>
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
+                    our.
+                </p>
+            </div>
         </div>
     </section>
-    <section class="packages"></section>
-    <section class="history"></section>
-    <section class="projects"></section>
-    <section class="team"></section>
-    <section class="support"></section>
-    <section class="hire_us"></section>
+    <section class="packages">
+        <div class="container">
+        </div>
+    </section>
+    <section class="history">
+        <div class="container">
+        </div>
+    </section>
+    <section class="projects">
+        <div class="container">
+        </div>
+    </section>
+    <section class="team">
+        <div class="container">
+        </div>
+    </section>
+    <section class="support">
+        <div class="container">
+        </div>
+    </section>
+    <section class="hire_us">
+        <div class="container">
+        </div>
+    </section>
     <footer class="footer"></footer>
 </body>
 
