--- a/src/index.html
+++ b/src/index.html
@@ -5,116 +5,135 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/main.css">
     <title>Unique-tech</title>
-    </head>
+</head>
 
 <body>
-    <header class="header">
-        <img class="log0">
-        <nav>
-            <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#">services</a></li>
-                <li><a href="#">about</a></li>
-                <li><a href="#">portfolio</a></li>
-                <li><a href="#">academic</a></li>
-                <li><a href="#">blog</a></li>
-                <li><a href="#">contact us</a><br/>
-                    <a href='tel:#'>(+966-322 322)</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section class="welcome">
-        <h1>unique-tech app development</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum dicta nobis aliquam iusto asperiores obcaecati ab iure ipsum corporis, magni vitae recusandae dolore nostrum iste officia totam tempore ipsam molestias.</p>
-        <button type="button">View More</button>
-    </section>
-    <section class="services">
-        <h2>what we do</h2>
-        <div class="services__block">
-            <article class="services__content">
-                <h3>search engine optimization</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!</p>
-                <a href="#">view more	</a>
-            </article>
-        </div>
-        <div class="services__block">
-            <article class="services__content">
-                <h3>affiliate marketting</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!</p>
-                <a href="#">view more	</a>
-            </article>
-        </div>
-        <div class="services__block">
-            <article class="services__content">
-                <h3>web design</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!</p>
-                <a href="#">view more	</a>
-            </article>
-        </div>
-    </section>
-    <!--	назвать иначе??-->
-    <section class="process">
-        <h2>how we work</h2>
-        <div class="process__content"></div>
-    </section>
-    <section class="our-features">
-        <h3>our features</h3>
-        <div class="our-features__section">
-            <h3 class="our-features__head">Visual Composer</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
-        </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">Responsive</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
-        </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">Retina Ready</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
-        </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">Typography</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
-        </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">VTheme Options Pannel</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
-        </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">Dummy Content</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
-        </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">Many Style Available</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
-        </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">Header Style</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
-        </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">10000+ icons</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
-        </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">Support</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
-        </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">Update</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
-        </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">SEO Ready</h3>
-            <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
-        </div>
-    </section>
-    <section class="packages"></section>
-    <section class="history"></section>
-    <section class="projects"></section>
-    <section class="team"></section>
-    <section class="support"></section>
-    <section class="hire_us"></section>
-    <footer class="footer"></footer>
+<header class="header">
+    <img class="log0">
+    <nav>
+        <ul>
+            <li><a href="#">home</a></li>
+            <li><a href="#">services</a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">portfolio</a></li>
+            <li><a href="#">academic</a></li>
+            <li><a href="#">blog</a></li>
+            <li><a href="#">contact us</a><br/>
+                <a href='tel:#'>(+966-322 322)</a></li>
+        </ul>
+    </nav>
+</header>
+<section class="welcome">
+    <h1>unique-tech app development</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum dicta nobis aliquam iusto asperiores obcaecati ab
+        iure ipsum corporis, magni vitae recusandae dolore nostrum iste officia totam tempore ipsam molestias.</p>
+    <button type="button">View More</button>
+</section>
+<section class="services">
+    <h2>what we do</h2>
+    <div class="services__block">
+        <article class="services__content">
+            <h3>search engine optimization</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
+                Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
+                rerum molestiae hic!</p>
+            <a href="#">view more </a>
+        </article>
+    </div>
+    <div class="services__block">
+        <article class="services__content">
+            <h3>affiliate marketting</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
+                Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
+                rerum molestiae hic!</p>
+            <a href="#">view more </a>
+        </article>
+    </div>
+    <div class="services__block">
+        <article class="services__content">
+            <h3>web design</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
+                Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
+                rerum molestiae hic!</p>
+            <a href="#">view more </a>
+        </article>
+    </div>
+</section>
+<!--	назвать иначе??-->
+<section class="process">
+    <h2>how we work</h2>
+    <div class="process__content"></div>
+</section>
+<section class="our-features">
+    <h3 class="our-features__heading">our features</h3>
+    <div class="our-features__section">
+        <h3 class="our-features__head">Visual Composer</h3>
+        <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+            remember any shortcodes with our. </p>
+    </div>
+    <div class="our-features__section">
+        <h3 class="our-features__head">Responsive</h3>
+        <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+            remember any shortcodes with our. </p>
+    </div>
+    <div class="our-features__section">
+        <h3 class="our-features__head">Retina Ready</h3>
+        <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+            remember any shortcodes with our. </p>
+    </div>
+    <div class="our-features__section">
+        <h3 class="our-features__head">Typography</h3>
+        <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+            remember any shortcodes with our. </p>
+    </div>
+    <div class="our-features__section">
+        <h3 class="our-features__head">VTheme Options Pannel</h3>
+        <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+            remember any shortcodes with our. </p>
+    </div>
+    <div class="our-features__section">
+        <h3 class="our-features__head">Dummy Content</h3>
+        <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+            remember any shortcodes with our. </p>
+    </div>
+    <div class="our-features__section">
+        <h3 class="our-features__head">Many Style Available</h3>
+        <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+            remember any shortcodes with our. </p>
+    </div>
+    <div class="our-features__section">
+        <h3 class="our-features__head">Header Style</h3>
+        <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+            remember any shortcodes with our. </p>
+    </div>
+    <div class="our-features__section">
+        <h3 class="our-features__head">10000+ icons</h3>
+        <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+            remember any shortcodes with our. </p>
+    </div>
+    <div class="our-features__section">
+        <h3 class="our-features__head">Support</h3>
+        <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+            remember any shortcodes with our. </p>
+    </div>
+    <div class="our-features__section">
+        <h3 class="our-features__head">Update</h3>
+        <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+            remember any shortcodes with our. </p>
+    </div>
+    <div class="our-features__section">
+        <h3 class="our-features__head">SEO Ready</h3>
+        <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+            remember any shortcodes with our. </p>
+    </div>
+</section>
+<section class="packages"></section>
+<section class="history"></section>
+<section class="projects"></section>
+<section class="team"></section>
+<section class="support"></section>
+<section class="hire_us"></section>
+<footer class="footer"></footer>
 </body>
 
 </html>
