--- a/src/index.html
+++ b/src/index.html
@@ -145,8 +145,8 @@
             </div>
         </div>
     </section>
-    <footer>
-        <section class="footer">
+    <footer class="footer-wrapper">
+        <section class="footer container">
             <nav class="footer__menu">
                 <ul>
                     <h3>PORTFOLIO</h3>
