wrap class added

--- a/src/index.html
+++ b/src/index.html
@@ -4,170 +4,212 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:100,300,400,500,700,900|Source+Sans+Pro:700&amp;subset=cyrillic-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:100,300,400,500,700,900|Source+Sans+Pro:700&amp;subset=cyrillic-ext"
+          rel="stylesheet">
 
-        <link class="nav__element" nk rel="stylesheet" href="./css/main.css">
-            <title>Unique-tech</title>
+    <link class="nav__element" nk rel="stylesheet" href="./css/main.css">
+    <title>Unique-tech</title>
 </head>
 
 <body>
-    <header class="header header--bgColor">
-        <div class="container header__container">
-            <img class="logo">
-            <nav class="nav">
-                <ul class="nav__block">
-                    <li class="nav__element"><a class="nav__link" href="#">home</a></li>
-                    <li class="nav__element"><a class="nav__link" href="#">services</a></li>
-                    <li class="nav__element"><a class="nav__link" href="#">about</a></li>
-                    <li class="nav__element"><a class="nav__link" href="#">portfolio</a></li>
-                    <li class="nav__element"><a class="nav__link" href="#">academic</a></li>
-                    <li class="nav__element"><a class="nav__link" href="#">blog</a></li>
-                    <li class="nav__element"><a class="nav__link" href="#">contact us</a><br/>
-                        <a href='tel:#'>(+966-322 322)</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <section class="welcome welcome--bgColor">
-        <div class="container">
+<header class="header header--bgColor">
+    <div class="container header__container">
+        <img class="logo">
+        <nav class="nav">
+            <ul class="nav__block">
+                <li class="nav__element"><a class="nav__link" href="#">home</a></li>
+                <li class="nav__element"><a class="nav__link" href="#">services</a></li>
+                <li class="nav__element"><a class="nav__link" href="#">about</a></li>
+                <li class="nav__element"><a class="nav__link" href="#">portfolio</a></li>
+                <li class="nav__element"><a class="nav__link" href="#">academic</a></li>
+                <li class="nav__element"><a class="nav__link" href="#">blog</a></li>
+                <li class="nav__element"><a class="nav__link" href="#">contact us</a><br/>
+                    <a href='tel:#'>(+966-322 322)</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+<section class="welcome welcome--bgColor">
+    <div class="container">
 
-            <h1>unique-tech app development</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum dicta nobis aliquam iusto asperiores obcaecati ab iure ipsum corporis, magni vitae recusandae dolore nostrum iste officia totam tempore ipsam molestias.</p>
-            <button type="button">View More</button>
+        <h1>unique-tech app development</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum dicta nobis aliquam iusto asperiores
+            obcaecati ab iure ipsum corporis, magni vitae recusandae dolore nostrum iste officia totam tempore ipsam
+            molestias.</p>
+        <button type="button">View More</button>
+    </div>
+</section>
+<section class="services">
+    <div class="container">
+        <h2>what we do</h2>
+        <div class="services__block">
+            <article class="services__content">
+                <h3>search engine optimization</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
+                    Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
+                    rerum molestiae hic!
+                </p>
+                <a href="#">view more </a>
+            </article>
         </div>
-    </section>
-    <section class="services">
-        <div class="container">
-            <h2>what we do</h2>
-            <div class="services__block">
-                <article class="services__content">
-                    <h3>search engine optimization</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
-                        Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
-                        rerum molestiae hic!
-                    </p>
-                    <a href="#">view more </a>
-                </article>
-            </div>
-            <div class="services__block">
-                <article class="services__content">
-                    <h3>affiliate marketting</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
-                        Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
-                        rerum molestiae hic!
-                    </p>
-                    <a href="#">view more </a>
-                </article>
-            </div>
-            <div class="services__block">
-                <article class="services__content">
-                    <h3>web design</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
-                        Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
-                        rerum molestiae hic!
-                    </p>
-                    <a href="#">view more </a>
-                </article>
-            </div>
+        <div class="services__block">
+            <article class="services__content">
+                <h3>affiliate marketting</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
+                    Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
+                    rerum molestiae hic!
+                </p>
+                <a href="#">view more </a>
+            </article>
         </div>
-    </section>
-    <!--	назвать иначе??-->
-    <div class="container"></div>
-    <section class="process">
-        <div class="container">
+        <div class="services__block">
+            <article class="services__content">
+                <h3>web design</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
+                    Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
+                    rerum molestiae hic!
+                </p>
+                <a href="#">view more </a>
+            </article>
+        </div>
+    </div>
+</section>
+<!--	назвать иначе??-->
+<div class="container"></div>
+<section class="process">
+    <div class="container">
 
-            <h2>how we work</h2>
-            <div class="process__content"></div>
+        <h2>how we work</h2>
+        <div class="process__content"></div>
+    </div>
+</section>
+<section class="features">
+    <h3 class="features__heading">our features</h3>
+    <div class="features__section">
+        <img src="img/svg/icons/notes27.svg">
+        <div class="wrap">
+            <div class="wrap">
+                <h3 class="features__head">Visual Composer</h3>
+                <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or
+                    to
+                    remember any shortcodes with our. </p></div>
         </div>
-    </section>
-    <section class="features">
-        <h3 class="features__heading">our features</h3>
-        <div class="features__section">
-            <h3 class="features__head">Visual Composer</h3>
-            <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
-                remember any shortcodes with our. </p>
-        </div>
-        <div class="features__section">
+    </div>
+    <div class="features__section">
+        <img src="img/svg/icons/notes27.svg">
+
+        <div class="wrap">
             <h3 class="features__head">Responsive</h3>
             <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-        <div class="features__section">
+    </div>
+    <div class="features__section">
+        <img src="img/svg/icons/notes27.svg">
+        <div class="wrap">
             <h3 class="features__head">Retina Ready</h3>
             <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-        <div class="features__section">
+    </div>
+    <div class="features__section">
+        <img src="img/svg/icons/notes27.svg">
+        <div class="wrap">
             <h3 class="features__head">Typography</h3>
             <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-        <div class="features__section">
+    </div>
+    <div class="features__section">
+        <img src="img/svg/icons/notes27.svg">
+        <div class="wrap">
             <h3 class="features__head">VTheme Options Pannel</h3>
             <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-        <div class="features__section">
+    </div>
+    <div class="features__section">
+        <img src="img/svg/icons/notes27.svg">
+        <div class="wrap">
             <h3 class="features__head">Dummy Content</h3>
             <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-        <div class="features__section">
+    </div>
+    <div class="features__section">
+        <img src="img/svg/icons/notes27.svg">
+        <div class="wrap">
             <h3 class="features__head">Many Style Available</h3>
             <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-        <div class="features__section">
+    </div>
+    <div class="features__section">
+        <img src="img/svg/icons/notes27.svg">
+        <div class="wrap">
             <h3 class="features__head">Header Style</h3>
             <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-        <div class="features__section">
+    </div>
+    <div class="features__section">
+        <img src="img/svg/icons/notes27.svg">
+        <div class="wrap">
             <h3 class="features__head">10000+ icons</h3>
             <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-        <div class="features__section">
+    </div>
+    <div class="features__section">
+        <img src="img/svg/icons/notes27.svg">
+        <div class="wrap">
             <h3 class="features__head">Support</h3>
             <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-        <div class="features__section">
+    </div>
+    <div class="features__section">
+        <img src="img/svg/icons/notes27.svg">
+        <div class="wrap">
             <h3 class="features__head">Update</h3>
             <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-        <div class="features__section">
+    </div>
+    <div class="features__section">
+        <img src="img/svg/icons/notes27.svg">
+        <div class="wrap">
             <h3 class="features__head">SEO Ready</h3>
             <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-    </section>
-    <section class="packages">
-        <div class="container">
-        </div>
-    </section>
-    <section class="history">
-        <div class="container">
-        </div>
-    </section>
-    <section class="projects">
-        <div class="container">
-        </div>
-    </section>
-    <section class="team">
-        <div class="container">
-        </div>
-    </section>
-    <section class="support">
-        <div class="container">
-        </div>
-    </section>
-    <section class="hire_us">
-        <div class="container">
-        </div>
-    </section>
-    <footer class="footer"></footer>
+    </div>
+</section>
+<section class="packages">
+    <div class="container">
+    </div>
+</section>
+<section class="history">
+    <div class="container">
+    </div>
+</section>
+<section class="projects">
+    <div class="container">
+    </div>
+</section>
+<section class="team">
+    <div class="container">
+    </div>
+</section>
+<section class="support">
+    <div class="container">
+    </div>
+</section>
+<section class="hire_us">
+    <div class="container">
+    </div>
+</section>
+<footer class="footer"></footer>
 </body>
 
 </html>
