--- a/src/index.html
+++ b/src/index.html
@@ -160,8 +160,13 @@
         <div class="container">
         </div>
     </section>
-    <section class="hire_us">
-        <div class="container">
+    <section class="hire__container">
+        <div class="hire">
+            <img class="hire__img" src="img/png/hire.png">
+            <div class="hire__content">
+                <h3 class="hire__h3">NEED CREATIVE WORKERS?</h3>
+                <button class="hire__button" form=""><span><b>HIRE US</b></button>
+            </div>
         </div>
     </section>
     <footer class="footer-wrapper">
