--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:100,300,400,500,700,900|Source+Sans+Pro:700&amp;subset=cyrillic-ext" rel="stylesheet">
 
-        <link class="nav__element" nk rel="stylesheet" href="./css/main.css">
-            <title>Unique-tech</title>
+    <link class="nav__element" nk rel="stylesheet" href="./css/main.css">
+    <title>Unique-tech</title>
 </head>
 
 <body>
@@ -42,9 +42,7 @@
             <div class="services__block">
                 <article class="services__content">
                     <h3>search engine optimization</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
-                        Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
-                        rerum molestiae hic!
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!
                     </p>
                     <a href="#">view more </a>
                 </article>
@@ -52,9 +50,7 @@
             <div class="services__block">
                 <article class="services__content">
                     <h3>affiliate marketting</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
-                        Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
-                        rerum molestiae hic!
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!
                     </p>
                     <a href="#">view more </a>
                 </article>
@@ -62,9 +58,7 @@
             <div class="services__block">
                 <article class="services__content">
                     <h3>web design</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
-                        Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
-                        rerum molestiae hic!
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!
                     </p>
                     <a href="#">view more </a>
                 </article>
@@ -86,74 +80,62 @@
             <h3>our features</h3>
             <div>
                 <h3>Visual Composer</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Responsive</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Retina Ready</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Typography</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>VTheme Options Pannel</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Dummy Content</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Many Style Available</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Header Style</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>10000+ icons</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Support</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Update</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>SEO Ready</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
         </div>
@@ -175,7 +157,18 @@
         </div>
     </section>
     <section class="support">
-        <div class="container">
+        <div class="support__container">
+            <h2 class="support__name grey-name">UPDATES & SUPPORT</h2>
+            <svg class="airplane"></svg>
+            <div class="suppport__inner">
+                <img class="support__img" src="img/png/macbook1.png">
+                <article class="support__text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p> Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
+                </article>
+                <button class="support_button yellow-btn">SUPPORT CENTER</button>
+            </div>
         </div>
     </section>
     <section class="hire_us">
