--- a/src/index.html
+++ b/src/index.html
@@ -164,6 +164,14 @@
     </section>
     <section class="history">
         <div class="container">
+            <div class="history__left">
+                <img src="./img/svg/happy_clerk.svg">
+            </div>
+            <div class="history__right">
+                <h2>our history</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum dicta nobis aliquam iusto asperiores obcaecati ab iure ipsum corporis, magni vitae recusandae dolore nostrum iste officia totam tempore ipsam molestias.</p>
+                <button class="history__button">button</button>
+            </div>
         </div>
     </section>
     <section class="projects">
