change src for img

--- a/src/index.html
+++ b/src/index.html
@@ -157,35 +157,35 @@
         <svg class="airplane"></svg>
         <div class="team__container">
             <figure class="team__member">
-                <img class="team__img" src="img/svg/team1.svg" alt="Foto of member">
+                <img class="team__img" src="../src/img/svg/team1.svg" alt="Foto of member">
                 <figcaption class="member">
                     <h3 class="member__name">SYED MIRAJ</h3>
                     <p class="member__position">UI & UX DESINER</p>
                 </figcaption>
             </figure>
             <figure class="team__member">
-                <img class="team__img" src="img/svg/team2.svg" alt="Foto of member">
+                <img class="team__img" src="../src/img/svg/team2.svg" alt="Foto of member">
                 <figcaption class="member">
                     <h3 class="member__name">PENY HUSTON</h3>
                     <p class="member__position">DEVELOPER</p>
                 </figcaption>
             </figure>
             <figure class="team__member">
-                <img class="team__img" src="img/svg/team3.svg" alt="Foto of member">
+                <img class="team__img" src="../src/img/svg/team3.svg" alt="Foto of member">
                 <figcaption class="member">
                     <h3 class="member__name">LENNERD SHELLY</h3>
                     <p class="member__position">REWIEWER</p>
                 </figcaption>
             </figure>
             <figure class="team__member">
-                <img class="team__img" src="img/svg/team4.svg" alt="Foto of member">
+                <img class="team__img" src="../src/img/svg/team4.svg" alt="Foto of member">
                 <figcaption class="member">
                     <h3 class="member__name">SHALDON CUPPER</h3>
                     <p class="member__position">MARKETTER</p>
                 </figcaption>
             </figure>
             <figure class="team__member">
-                <img class="team__img" src="img/svg/team5.svg" alt="Foto of member">
+                <img class="team__img" src="../src/img/svg/team5.svg" alt="Foto of member">
                 <figcaption class="member">
                     <h3 class="member__name">ASHLEY COLE</h3>
                     <p class="member__position">MANAGEMENT</p>
